Fix issues with the header on small screens.
The menu items could fall out of the header. Not anymore thanks to clearfix.

--- a/site/content/less/header.less
+++ b/site/content/less/header.less
@@ -5,6 +5,13 @@
 
 #header {
     background: @color-main-dark;
+
+    &:after {
+        content: " ";
+        display: block;
+        height: 0;
+        clear: both;
+    }
 }
 
 #loading-gear {
